--- a/usecases/build.gradle
+++ b/usecases/build.gradle
@@ -10,13 +10,20 @@ repositories {
 }
 
 dependencies {
+    implementation project(':domain')
     implementation project(':ports')
     implementation project(':gateway')
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation "org.junit.jupiter:junit-jupiter:5.9.0"
+    testImplementation "org.junit.platform:junit-platform-suite:1.9.1"
+
+    testImplementation 'io.cucumber:cucumber-java:7.8.1'
+    testImplementation("io.cucumber:cucumber-junit-platform-engine:7.8.1")
 
     testImplementation "org.assertj:assertj-core:3.23.1"
+    testImplementation 'org.mockito:mockito-core:4.8.0'
 }
 
 test {
