Fixed dependency issues in the module setup

--- a/app-javafx/build.gradle
+++ b/app-javafx/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     implementation project(':ports')
 
     runtimeOnly project(':gateway-inmemory')
+    runtimeOnly project(':usecases')
 }
