Refactored the app to make use of an event based approach for most interactions

--- a/app-javafx/build.gradle
+++ b/app-javafx/build.gradle
@@ -17,4 +17,6 @@ dependencies {
 
     runtimeOnly project(':gateway-inmemory')
     runtimeOnly project(':usecases')
+
+    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
 }
