--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ configure(subprojects.findAll()) {
 
         testImplementation 'org.assertj:assertj-core:3.23.1'
         testImplementation 'org.mockito:mockito-core:4.8.0'
+
+        testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.1'
     }
 
     test {
