Added a gateway-filesystem submodule
https://github.com/flens-dev/pendenzenliste/issues/1

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'app-javafx'
 
 include 'domain'
 include 'gateway'
+include 'gateway-filesystem'
 include 'gateway-inmemory'
 include 'ports'
 include 'usecases'
