Implemented the FilesystemToDoGateway
https://github.com/flens-dev/pendenzenliste/issues/1

--- a/app-javafx/build.gradle
+++ b/app-javafx/build.gradle
@@ -15,7 +15,7 @@ mainClassName = 'pendenzenliste.javafx.PendenzenlisteApp'
 dependencies {
     implementation project(':ports')
 
-    runtimeOnly project(':gateway-inmemory')
+    runtimeOnly project(':gateway-filesystem')
     runtimeOnly project(':usecases')
 
     implementation "io.reactivex.rxjava3:rxjava:3.1.5"
