Added a gateway-redis submodule
https://github.com/flens-dev/pendenzenliste/issues/2

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,10 @@ include 'app-vaadin'
 
 include 'domain'
 include 'boundary'
+
 include 'gateway'
 include 'gateway-filesystem'
 include 'gateway-inmemory'
+include 'gateway-redis'
+
 include 'usecases'
