Added the rxjava dependency to the usecases project
https://github.com/flens-dev/pendenzenliste/issues/18

--- a/usecases/build.gradle
+++ b/usecases/build.gradle
@@ -2,4 +2,6 @@ dependencies {
     implementation project(':boundary')
     implementation project(':domain')
     implementation project(':gateway')
+    
+    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
 }
