Renamed usecases to boundary-usecases

--- a/app-cli/build.gradle
+++ b/app-cli/build.gradle
@@ -11,6 +11,6 @@ dependencies {
 
     implementation project(':boundary')
 
+    runtimeOnly project(':boundary-usecases')
     runtimeOnly project(':gateway-filesystem')
-    runtimeOnly project(':usecases')
 }
