Run integrationTests as part of the build
https://github.com/flens-dev/pendenzenliste/issues/19

--- a/gateway-redis/build.gradle
+++ b/gateway-redis/build.gradle
@@ -26,3 +26,16 @@ dependencies {
 
     integrationTestImplementation 'org.testcontainers:testcontainers:1.17.2'
 }
+
+tasks.register('integrationTest', Test) {
+    description = 'Runs integration tests.'
+    group = 'verification'
+
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    shouldRunAfter test
+
+    useJUnitPlatform()
+}
+
+check.dependsOn integrationTest
