--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ configure(subprojects.findAll()) {
     version '1.0-SNAPSHOT'
 
     apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'idea'
 
     apply plugin: 'jacoco'
