Added supporting-domain-achievements Module
https://github.com/flens-dev/pendenzenliste/issues/9

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,8 +8,12 @@ include 'boundary'
 include 'boundary-usecases'
 
 include 'domain'
+
 include 'core-domain-todos'
 project(':core-domain-todos').projectDir = file('domain/core-domain-todos')
+
+include 'supporting-domain-achievements'
+project(':supporting-domain-achievements').projectDir = file('domain/supporting-domain-achievements')
 
 include 'gateway'
 include 'gateway-filesystem'
