Implemented simple in-memory EventBus mechanism
https://github.com/flens-dev/pendenzenliste/issues/21

--- a/boundary-usecases/build.gradle
+++ b/boundary-usecases/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     implementation project(':boundary')
     implementation project(':domain')
     implementation project(':gateway')
-    
+    implementation project(':messaging')
+
     implementation "io.reactivex.rxjava3:rxjava:3.1.5"
 }
