Extracted util-serialization Module
https://github.com/flens-dev/pendenzenliste/issues/22

--- a/gateway-redis/build.gradle
+++ b/gateway-redis/build.gradle
@@ -13,6 +13,7 @@ configurations {
 dependencies {
     implementation project(':domain')
     implementation project(':gateway')
+    implementation project(':util-serialization')
 
     implementation 'redis.clients:jedis:4.4.0-m1'
 
