--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,5 @@ include 'gateway'
 include 'gateway-filesystem'
 include 'gateway-inmemory'
 include 'gateway-redis'
+
+include 'util-serialization'
