Extract dependency versions into gradle.properties
https://github.com/flens-dev/pendenzenliste/issues/28

--- a/app-javafx/build.gradle
+++ b/app-javafx/build.gradle
@@ -18,5 +18,5 @@ dependencies {
     runtimeOnly project(':boundary-usecases')
     runtimeOnly project(':gateway-filesystem')
 
-    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
+    implementation "io.reactivex.rxjava3:rxjava:${rxJavaVersion}"
 }
