--- a/app-cli/build.gradle
+++ b/app-cli/build.gradle
@@ -7,7 +7,7 @@ plugins {
 mainClassName = 'pendenzenliste.cli.PendenzenlisteApp'
 
 dependencies {
-    implementation 'commons-cli:commons-cli:1.5.0'
+    implementation "commons-cli:commons-cli:${commonsCLIVersion}"
 
     implementation project(':boundary')
 
