--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,21 @@
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.daemon=true
+# Production dependency versions
+commonsCLIVersion=1.5.0
+jedisVersion=4.4.0-m1
+rxJavaVersion=3.1.5
+servletApiVersion=4.0.1
+tomcatVersion=9.0.70
+vaadinVersion=23.3.3
+# Build dependency versions
+desiredNpmVersion=16.19.0
+desiredPnpmVersion=7.23.0
+# Test dependency versions
+assertJVersion=3.23.1
+archUnitVersion=1.0.1
+cucumberVersion=7.8.1
+junitJupiterVersion=5.9.0
+junitPlatformVersion=1.9.1
+mockitoVersion=4.8.0
+testContainersVersion=1.17.2
