--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ commonsCLIVersion=1.5.0
 jedisVersion=4.4.0-m1
 rxJavaVersion=3.1.5
 servletApiVersion=4.0.1
+springBootVersion=3.0.0
 tomcatVersion=9.0.70
 vaadinVersion=23.3.3
 # Build dependency versions
