Extract boundary-acceptance-test into its own module
https://github.com/flens-dev/pendenzenliste/issues/28

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include 'app-javafx'
 include 'app-vaadin'
 
 include 'boundary'
+include 'boundary-acceptance-test'
 include 'boundary-usecases'
 
 include 'domain'
