Implement portable test suite
https://github.com/flens-dev/pendenzenliste/issues/28

--- a/boundary-acceptance-test/build.gradle
+++ b/boundary-acceptance-test/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     integrationTestImplementation project(':gateway-inmemory')
     integrationTestImplementation project(':gateway-filesystem')
 
+    integrationTestImplementation "redis.clients:jedis:${jedisVersion}"
+
     integrationTestImplementation project(':boundary')
     integrationTestImplementation project(':boundary-usecases')
 
