Added supporting domain statistics
https://github.com/flens-dev/pendenzenliste/issues/16

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,9 @@ project(':core-domain-todos').projectDir = file('domain/core-domain-todos')
 include 'supporting-domain-achievements'
 project(':supporting-domain-achievements').projectDir = file('domain/supporting-domain-achievements')
 
+include 'supporting-domain-statistics'
+project(':supporting-domain-statistics').projectDir = file('domain/supporting-domain-statistics')
+
 include 'messaging'
 
 include 'gateway'
