--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     api project(':core-domain-todos')
     api project(':supporting-domain-achievements')
+    api project(':supporting-domain-statistics')
 }
