--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ configure(subprojects.findAll()) {
     apply plugin: 'idea'
 
     apply plugin: 'jacoco'
+    apply plugin: 'pmd'
 
     repositories {
         mavenCentral()
@@ -50,5 +51,15 @@ configure(subprojects.findAll()) {
             xml.required = false
             csv.required = false
         }
+    }
+
+    pmd {
+        consoleOutput = false
+        sourceSets = [project.sourceSets.main]
+        toolVersion = "6.54.0"
+        incrementalAnalysis = true
+
+        //TODO: Set this flag to false as soon as the issues are fixed
+        ignoreFailures = true
     }
 }
