Upgrade to pnpm v24.1.0
https://github.com/flens-dev/pendenzenliste/issues/41

--- a/app-vaadin/build.gradle
+++ b/app-vaadin/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.25'
 }
 
-vaadinPrepareFrontend.dependsOn(pnpmInstall)
+// Not entirely sure, why this line leads to an exception...
+//vaadinPrepareFrontend.dependsOn(pnpmInstall)
 
 configurations {
     all {
