--- a/app-vaadin/package.json
+++ b/app-vaadin/package.json
@@ -3,252 +3,180 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "@polymer/iron-icon": "3.0.1",
-      "@polymer/iron-iconset-svg": "3.0.1",
-      "@polymer/iron-list": "3.1.0",
-      "@polymer/iron-meta": "3.0.1",
-      "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.5.1",
-      "@vaadin/accordion": "23.3.3",
-      "@vaadin/app-layout": "23.3.3",
-      "@vaadin/avatar": "23.3.3",
-      "@vaadin/avatar-group": "23.3.3",
-      "@vaadin/bundles": "23.3.3",
-      "@vaadin/button": "23.3.3",
-      "@vaadin/checkbox": "23.3.3",
-      "@vaadin/checkbox-group": "23.3.3",
-      "@vaadin/combo-box": "23.3.3",
-      "@vaadin/common-frontend": "0.0.17",
-      "@vaadin/component-base": "23.3.3",
-      "@vaadin/confirm-dialog": "23.3.3",
-      "@vaadin/context-menu": "23.3.3",
-      "@vaadin/custom-field": "23.3.3",
-      "@vaadin/date-picker": "23.3.3",
-      "@vaadin/date-time-picker": "23.3.3",
-      "@vaadin/details": "23.3.3",
-      "@vaadin/dialog": "23.3.3",
-      "@vaadin/email-field": "23.3.3",
-      "@vaadin/field-base": "23.3.3",
-      "@vaadin/field-highlighter": "23.3.3",
-      "@vaadin/form-layout": "23.3.3",
-      "@vaadin/grid": "23.3.3",
-      "@vaadin/horizontal-layout": "23.3.3",
-      "@vaadin/icon": "23.3.3",
-      "@vaadin/icons": "23.3.3",
-      "@vaadin/input-container": "23.3.3",
-      "@vaadin/integer-field": "23.3.3",
-      "@vaadin/item": "23.3.3",
-      "@vaadin/list-box": "23.3.3",
-      "@vaadin/lit-renderer": "23.3.3",
-      "@vaadin/login": "23.3.3",
-      "@vaadin/menu-bar": "23.3.3",
-      "@vaadin/message-input": "23.3.3",
-      "@vaadin/message-list": "23.3.3",
-      "@vaadin/multi-select-combo-box": "23.3.3",
-      "@vaadin/notification": "23.3.3",
-      "@vaadin/number-field": "23.3.3",
-      "@vaadin/password-field": "23.3.3",
-      "@vaadin/polymer-legacy-adapter": "23.3.3",
-      "@vaadin/progress-bar": "23.3.3",
-      "@vaadin/radio-group": "23.3.3",
-      "@vaadin/router": "1.7.4",
-      "@vaadin/scroller": "23.3.3",
-      "@vaadin/select": "23.3.3",
-      "@vaadin/split-layout": "23.3.3",
-      "@vaadin/tabs": "23.3.3",
-      "@vaadin/tabsheet": "23.3.3",
-      "@vaadin/text-area": "23.3.3",
-      "@vaadin/text-field": "23.3.3",
-      "@vaadin/time-picker": "23.3.3",
-      "@vaadin/tooltip": "23.3.3",
-      "@vaadin/upload": "23.3.3",
-      "@vaadin/vaadin-accordion": "23.3.3",
-      "@vaadin/vaadin-app-layout": "23.3.3",
-      "@vaadin/vaadin-avatar": "23.3.3",
-      "@vaadin/vaadin-button": "23.3.3",
-      "@vaadin/vaadin-checkbox": "23.3.3",
-      "@vaadin/vaadin-combo-box": "23.3.3",
-      "@vaadin/vaadin-confirm-dialog": "23.3.3",
-      "@vaadin/vaadin-context-menu": "23.3.3",
-      "@vaadin/vaadin-custom-field": "23.3.3",
-      "@vaadin/vaadin-date-picker": "23.3.3",
-      "@vaadin/vaadin-date-time-picker": "23.3.3",
-      "@vaadin/vaadin-details": "23.3.3",
-      "@vaadin/vaadin-development-mode-detector": "2.0.5",
-      "@vaadin/vaadin-dialog": "23.3.3",
-      "@vaadin/vaadin-form-layout": "23.3.3",
-      "@vaadin/vaadin-grid": "23.3.3",
-      "@vaadin/vaadin-icon": "23.3.3",
-      "@vaadin/vaadin-icons": "23.3.3",
-      "@vaadin/vaadin-item": "23.3.3",
-      "@vaadin/vaadin-list-box": "23.3.3",
-      "@vaadin/vaadin-list-mixin": "23.3.3",
-      "@vaadin/vaadin-login": "23.3.3",
-      "@vaadin/vaadin-lumo-styles": "23.3.3",
-      "@vaadin/vaadin-material-styles": "23.3.3",
-      "@vaadin/vaadin-menu-bar": "23.3.3",
-      "@vaadin/vaadin-messages": "23.3.3",
-      "@vaadin/vaadin-notification": "23.3.3",
-      "@vaadin/vaadin-ordered-layout": "23.3.3",
-      "@vaadin/vaadin-overlay": "23.3.3",
-      "@vaadin/vaadin-progress-bar": "23.3.3",
-      "@vaadin/vaadin-radio-button": "23.3.3",
-      "@vaadin/vaadin-select": "23.3.3",
-      "@vaadin/vaadin-split-layout": "23.3.3",
-      "@vaadin/vaadin-tabs": "23.3.3",
-      "@vaadin/vaadin-template-renderer": "23.3.3",
-      "@vaadin/vaadin-text-field": "23.3.3",
-      "@vaadin/vaadin-themable-mixin": "23.3.3",
-      "@vaadin/vaadin-time-picker": "23.3.3",
-      "@vaadin/vaadin-upload": "23.3.3",
+      "@vaadin/a11y-base": "24.1.0",
+      "@vaadin/accordion": "24.1.0",
+      "@vaadin/app-layout": "24.1.0",
+      "@vaadin/avatar": "24.1.0",
+      "@vaadin/avatar-group": "24.1.0",
+      "@vaadin/bundles": "24.1.0",
+      "@vaadin/button": "24.1.0",
+      "@vaadin/checkbox": "24.1.0",
+      "@vaadin/checkbox-group": "24.1.0",
+      "@vaadin/combo-box": "24.1.0",
+      "@vaadin/common-frontend": "0.0.18",
+      "@vaadin/component-base": "24.1.0",
+      "@vaadin/confirm-dialog": "24.1.0",
+      "@vaadin/context-menu": "24.1.0",
+      "@vaadin/custom-field": "24.1.0",
+      "@vaadin/date-picker": "24.1.0",
+      "@vaadin/date-time-picker": "24.1.0",
+      "@vaadin/details": "24.1.0",
+      "@vaadin/dialog": "24.1.0",
+      "@vaadin/email-field": "24.1.0",
+      "@vaadin/field-base": "24.1.0",
+      "@vaadin/field-highlighter": "24.1.0",
+      "@vaadin/form-layout": "24.1.0",
+      "@vaadin/grid": "24.1.0",
+      "@vaadin/horizontal-layout": "24.1.0",
+      "@vaadin/icon": "24.1.0",
+      "@vaadin/icons": "24.1.0",
+      "@vaadin/input-container": "24.1.0",
+      "@vaadin/integer-field": "24.1.0",
+      "@vaadin/item": "24.1.0",
+      "@vaadin/list-box": "24.1.0",
+      "@vaadin/lit-renderer": "24.1.0",
+      "@vaadin/login": "24.1.0",
+      "@vaadin/menu-bar": "24.1.0",
+      "@vaadin/message-input": "24.1.0",
+      "@vaadin/message-list": "24.1.0",
+      "@vaadin/multi-select-combo-box": "24.1.0",
+      "@vaadin/notification": "24.1.0",
+      "@vaadin/number-field": "24.1.0",
+      "@vaadin/overlay": "24.1.0",
+      "@vaadin/password-field": "24.1.0",
+      "@vaadin/polymer-legacy-adapter": "24.1.0",
+      "@vaadin/progress-bar": "24.1.0",
+      "@vaadin/radio-group": "24.1.0",
+      "@vaadin/router": "1.7.5",
+      "@vaadin/scroller": "24.1.0",
+      "@vaadin/select": "24.1.0",
+      "@vaadin/side-nav": "24.1.0",
+      "@vaadin/split-layout": "24.1.0",
+      "@vaadin/tabs": "24.1.0",
+      "@vaadin/tabsheet": "24.1.0",
+      "@vaadin/text-area": "24.1.0",
+      "@vaadin/text-field": "24.1.0",
+      "@vaadin/time-picker": "24.1.0",
+      "@vaadin/tooltip": "24.1.0",
+      "@vaadin/upload": "24.1.0",
+      "@vaadin/vaadin-development-mode-detector": "2.0.6",
+      "@vaadin/vaadin-lumo-styles": "24.1.0",
+      "@vaadin/vaadin-material-styles": "24.1.0",
+      "@vaadin/vaadin-themable-mixin": "24.1.0",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vaadin-virtual-list": "23.3.3",
-      "@vaadin/vertical-layout": "23.3.3",
-      "@vaadin/virtual-list": "23.3.3",
+      "@vaadin/vertical-layout": "24.1.0",
+      "@vaadin/virtual-list": "24.1.0",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.4.1"
+      "lit": "2.7.4",
+      "mobile-drag-drop": "2.3.0-rc.2"
     },
     "devDependencies": {
-      "@rollup/plugin-replace": "3.1.0",
-      "@rollup/pluginutils": "4.1.0",
+      "@rollup/plugin-replace": "5.0.2",
+      "@rollup/pluginutils": "5.0.2",
       "async": "3.2.2",
       "glob": "7.2.3",
       "mkdirp": "1.0.4",
       "rollup-plugin-brotli": "3.1.0",
+      "rollup-plugin-visualizer": "5.9.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "4.9.3",
-      "vite": "v3.2.4",
-      "vite-plugin-checker": "0.5.1",
-      "workbox-build": "6.5.0",
-      "workbox-core": "6.5.4",
-      "workbox-precaching": "6.5.4"
+      "typescript": "5.0.4",
+      "vite": "4.3.9",
+      "vite-plugin-checker": "0.5.5",
+      "workbox-build": "7.0.0",
+      "workbox-core": "7.0.0",
+      "workbox-precaching": "7.0.0"
     },
-    "hash": "24165418280026d75ddd4bf03dd55b80645f66dc383af7710e93ac42c541d8b7"
+    "hash": "c79a779fb32dd7cfddc07804a7a89d13b8acf357cfa127c2450e56d114575549"
   },
   "dependencies": {
-    "@polymer/iron-icon": "3.0.1",
-    "@polymer/iron-iconset-svg": "3.0.1",
-    "@polymer/iron-list": "3.1.0",
-    "@polymer/iron-meta": "3.0.1",
-    "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.5.1",
-    "@vaadin/accordion": "23.3.3",
-    "@vaadin/app-layout": "23.3.3",
-    "@vaadin/avatar": "23.3.3",
-    "@vaadin/avatar-group": "23.3.3",
-    "@vaadin/bundles": "23.3.3",
-    "@vaadin/button": "23.3.3",
-    "@vaadin/checkbox": "23.3.3",
-    "@vaadin/checkbox-group": "23.3.3",
-    "@vaadin/combo-box": "23.3.3",
-    "@vaadin/common-frontend": "0.0.17",
-    "@vaadin/component-base": "23.3.3",
-    "@vaadin/confirm-dialog": "23.3.3",
-    "@vaadin/context-menu": "23.3.3",
-    "@vaadin/custom-field": "23.3.3",
-    "@vaadin/date-picker": "23.3.3",
-    "@vaadin/date-time-picker": "23.3.3",
-    "@vaadin/details": "23.3.3",
-    "@vaadin/dialog": "23.3.3",
-    "@vaadin/email-field": "23.3.3",
-    "@vaadin/field-base": "23.3.3",
-    "@vaadin/field-highlighter": "23.3.3",
-    "@vaadin/form-layout": "23.3.3",
-    "@vaadin/grid": "23.3.3",
-    "@vaadin/horizontal-layout": "23.3.3",
-    "@vaadin/icon": "23.3.3",
-    "@vaadin/icons": "23.3.3",
-    "@vaadin/input-container": "23.3.3",
-    "@vaadin/integer-field": "23.3.3",
-    "@vaadin/item": "23.3.3",
-    "@vaadin/list-box": "23.3.3",
-    "@vaadin/lit-renderer": "23.3.3",
-    "@vaadin/login": "23.3.3",
-    "@vaadin/menu-bar": "23.3.3",
-    "@vaadin/message-input": "23.3.3",
-    "@vaadin/message-list": "23.3.3",
-    "@vaadin/multi-select-combo-box": "23.3.3",
-    "@vaadin/notification": "23.3.3",
-    "@vaadin/number-field": "23.3.3",
-    "@vaadin/password-field": "23.3.3",
-    "@vaadin/polymer-legacy-adapter": "23.3.3",
-    "@vaadin/progress-bar": "23.3.3",
-    "@vaadin/radio-group": "23.3.3",
-    "@vaadin/router": "1.7.4",
-    "@vaadin/scroller": "23.3.3",
-    "@vaadin/select": "23.3.3",
-    "@vaadin/split-layout": "23.3.3",
-    "@vaadin/tabs": "23.3.3",
-    "@vaadin/tabsheet": "23.3.3",
-    "@vaadin/text-area": "23.3.3",
-    "@vaadin/text-field": "23.3.3",
-    "@vaadin/time-picker": "23.3.3",
-    "@vaadin/tooltip": "23.3.3",
-    "@vaadin/upload": "23.3.3",
-    "@vaadin/vaadin-accordion": "23.3.3",
-    "@vaadin/vaadin-app-layout": "23.3.3",
-    "@vaadin/vaadin-avatar": "23.3.3",
-    "@vaadin/vaadin-button": "23.3.3",
-    "@vaadin/vaadin-checkbox": "23.3.3",
-    "@vaadin/vaadin-combo-box": "23.3.3",
-    "@vaadin/vaadin-confirm-dialog": "23.3.3",
-    "@vaadin/vaadin-context-menu": "23.3.3",
-    "@vaadin/vaadin-custom-field": "23.3.3",
-    "@vaadin/vaadin-date-picker": "23.3.3",
-    "@vaadin/vaadin-date-time-picker": "23.3.3",
-    "@vaadin/vaadin-details": "23.3.3",
-    "@vaadin/vaadin-development-mode-detector": "2.0.5",
-    "@vaadin/vaadin-dialog": "23.3.3",
-    "@vaadin/vaadin-form-layout": "23.3.3",
-    "@vaadin/vaadin-grid": "23.3.3",
-    "@vaadin/vaadin-icon": "23.3.3",
-    "@vaadin/vaadin-icons": "23.3.3",
-    "@vaadin/vaadin-item": "23.3.3",
-    "@vaadin/vaadin-list-box": "23.3.3",
-    "@vaadin/vaadin-list-mixin": "23.3.3",
-    "@vaadin/vaadin-login": "23.3.3",
-    "@vaadin/vaadin-lumo-styles": "23.3.3",
-    "@vaadin/vaadin-material-styles": "23.3.3",
-    "@vaadin/vaadin-menu-bar": "23.3.3",
-    "@vaadin/vaadin-messages": "23.3.3",
-    "@vaadin/vaadin-notification": "23.3.3",
-    "@vaadin/vaadin-ordered-layout": "23.3.3",
-    "@vaadin/vaadin-overlay": "23.3.3",
-    "@vaadin/vaadin-progress-bar": "23.3.3",
-    "@vaadin/vaadin-radio-button": "23.3.3",
-    "@vaadin/vaadin-select": "23.3.3",
-    "@vaadin/vaadin-split-layout": "23.3.3",
-    "@vaadin/vaadin-tabs": "23.3.3",
-    "@vaadin/vaadin-template-renderer": "23.3.3",
-    "@vaadin/vaadin-text-field": "23.3.3",
-    "@vaadin/vaadin-themable-mixin": "23.3.3",
-    "@vaadin/vaadin-time-picker": "23.3.3",
-    "@vaadin/vaadin-upload": "23.3.3",
+    "@vaadin/a11y-base": "24.1.0",
+    "@vaadin/accordion": "24.1.0",
+    "@vaadin/app-layout": "24.1.0",
+    "@vaadin/avatar": "24.1.0",
+    "@vaadin/avatar-group": "24.1.0",
+    "@vaadin/bundles": "24.1.0",
+    "@vaadin/button": "24.1.0",
+    "@vaadin/checkbox": "24.1.0",
+    "@vaadin/checkbox-group": "24.1.0",
+    "@vaadin/combo-box": "24.1.0",
+    "@vaadin/common-frontend": "0.0.18",
+    "@vaadin/component-base": "24.1.0",
+    "@vaadin/confirm-dialog": "24.1.0",
+    "@vaadin/context-menu": "24.1.0",
+    "@vaadin/custom-field": "24.1.0",
+    "@vaadin/date-picker": "24.1.0",
+    "@vaadin/date-time-picker": "24.1.0",
+    "@vaadin/details": "24.1.0",
+    "@vaadin/dialog": "24.1.0",
+    "@vaadin/email-field": "24.1.0",
+    "@vaadin/field-base": "24.1.0",
+    "@vaadin/field-highlighter": "24.1.0",
+    "@vaadin/form-layout": "24.1.0",
+    "@vaadin/grid": "24.1.0",
+    "@vaadin/horizontal-layout": "24.1.0",
+    "@vaadin/icon": "24.1.0",
+    "@vaadin/icons": "24.1.0",
+    "@vaadin/input-container": "24.1.0",
+    "@vaadin/integer-field": "24.1.0",
+    "@vaadin/item": "24.1.0",
+    "@vaadin/list-box": "24.1.0",
+    "@vaadin/lit-renderer": "24.1.0",
+    "@vaadin/login": "24.1.0",
+    "@vaadin/menu-bar": "24.1.0",
+    "@vaadin/message-input": "24.1.0",
+    "@vaadin/message-list": "24.1.0",
+    "@vaadin/multi-select-combo-box": "24.1.0",
+    "@vaadin/notification": "24.1.0",
+    "@vaadin/number-field": "24.1.0",
+    "@vaadin/overlay": "24.1.0",
+    "@vaadin/password-field": "24.1.0",
+    "@vaadin/polymer-legacy-adapter": "24.1.0",
+    "@vaadin/progress-bar": "24.1.0",
+    "@vaadin/radio-group": "24.1.0",
+    "@vaadin/router": "1.7.5",
+    "@vaadin/scroller": "24.1.0",
+    "@vaadin/select": "24.1.0",
+    "@vaadin/side-nav": "24.1.0",
+    "@vaadin/split-layout": "24.1.0",
+    "@vaadin/tabs": "24.1.0",
+    "@vaadin/tabsheet": "24.1.0",
+    "@vaadin/text-area": "24.1.0",
+    "@vaadin/text-field": "24.1.0",
+    "@vaadin/time-picker": "24.1.0",
+    "@vaadin/tooltip": "24.1.0",
+    "@vaadin/upload": "24.1.0",
+    "@vaadin/vaadin-development-mode-detector": "2.0.6",
+    "@vaadin/vaadin-lumo-styles": "24.1.0",
+    "@vaadin/vaadin-material-styles": "24.1.0",
+    "@vaadin/vaadin-themable-mixin": "24.1.0",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vaadin-virtual-list": "23.3.3",
-    "@vaadin/vertical-layout": "23.3.3",
-    "@vaadin/virtual-list": "23.3.3",
+    "@vaadin/vertical-layout": "24.1.0",
+    "@vaadin/virtual-list": "24.1.0",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
     "i18next": "^22.4.9",
-    "lit": "2.4.1"
+    "lit": "2.7.4",
+    "mobile-drag-drop": "2.3.0-rc.2"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "3.1.0",
-    "@rollup/pluginutils": "4.1.0",
+    "@rollup/plugin-replace": "5.0.2",
+    "@rollup/pluginutils": "5.0.2",
     "async": "3.2.2",
     "glob": "7.2.3",
     "mkdirp": "1.0.4",
     "rollup-plugin-brotli": "3.1.0",
+    "rollup-plugin-visualizer": "5.9.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "4.9.3",
-    "vite": "v3.2.4",
-    "vite-plugin-checker": "0.5.1",
-    "workbox-build": "6.5.0",
-    "workbox-core": "6.5.4",
-    "workbox-precaching": "6.5.4"
+    "typescript": "5.0.4",
+    "vite": "4.3.9",
+    "vite-plugin-checker": "0.5.5",
+    "workbox-build": "7.0.0",
+    "workbox-core": "7.0.0",
+    "workbox-precaching": "7.0.0"
   }
 }
