Implemented a DiscordBot integration
https://github.com/flens-dev/pendenzenliste/issues/35

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.caching=true
 org.gradle.daemon=true
 # Production dependency versions
 commonsCLIVersion=1.5.0
+discord4JVersion=3.2.5
 dropwizardVersion=2.1.4
 jedisVersion=4.4.0-m1
 rxJavaVersion=3.1.5
