--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'pendenzenliste'
 
 include 'app-cli'
+include 'app-discord-bot'
 include 'app-dropwizard'
 include 'app-javafx'
 include 'app-vaadin'
