--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=true
 commonsCLIVersion=1.5.0
 discord4JVersion=3.2.5
 dropwizardVersion=2.1.4
-jedisVersion=4.4.0-m1
+jedisVersion=4.4.3
 rxJavaVersion=3.1.6
 servletApiVersion=4.0.1
 springBootVersion=3.0.0
