Moved InMemoryEventBus into its own module

--- a/app-dropwizard/build.gradle
+++ b/app-dropwizard/build.gradle
@@ -12,4 +12,5 @@ dependencies {
 
     runtimeOnly project(':boundary-usecases')
     runtimeOnly project(':gateway-filesystem')
+    runtimeOnly project(':messaging-inmemory')
 }
