--- a/app-vaadin/build.gradle
+++ b/app-vaadin/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     runtimeOnly project(':boundary-usecases')
     runtimeOnly project(':gateway-filesystem')
+    runtimeOnly project(':messaging-inmemory')
 
     implementation enforcedPlatform("com.vaadin:vaadin-bom:${vaadinVersion}")
 
