--- a/gateway-acceptance-test/build.gradle
+++ b/gateway-acceptance-test/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     integrationTestImplementation project(':gateway-redis')
     integrationTestImplementation project(':gateway-inmemory')
     integrationTestImplementation project(':gateway-filesystem')
+    integrationTestImplementation project(':messaging-inmemory')
 
     integrationTestImplementation project(':gateway-acceptance-test')
 
