--- a/app-cli/build.gradle
+++ b/app-cli/build.gradle
@@ -13,4 +13,5 @@ dependencies {
 
     runtimeOnly project(':boundary-usecases')
     runtimeOnly project(':gateway-filesystem')
+    runtimeOnly project(':messaging-inmemory')
 }
