--- a/app-discord-bot/build.gradle
+++ b/app-discord-bot/build.gradle
@@ -14,4 +14,5 @@ dependencies {
 
     runtimeOnly project(':boundary-usecases')
     runtimeOnly project(':gateway-filesystem')
+    runtimeOnly project(':messaging-inmemory')
 }
