Moved versions to the gradle.properties

--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ configure(subprojects.findAll()) {
 
         testImplementation "com.tngtech.archunit:archunit-junit5:${archUnitVersion}"
 
-        compileOnly 'com.github.spotbugs:spotbugs-annotations:4.7.3'
-        spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0'
+        compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugsAnnotationVersion}"
+        spotbugsPlugins "com.h3xstream.findsecbugs:findsecbugs-plugin:${findsecbugsVersion}"
     }
 
     test {
