--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,6 @@ junitJupiterVersion=5.9.0
 junitPlatformVersion=1.9.1
 mockitoVersion=4.8.0
 testContainersVersion=1.17.2
+# Static code analysis versions
+findsecbugsVersion=1.12.0
+spotbugsAnnotationVersion=4.7.3
