Configured cucumber test execution
The cucumber test execution will now generate more detailed reports.

The configuration has also been changed to prevent parallelized scenario execution as that may have lead to flaky tests in the past.

--- a/boundary-acceptance-test/build.gradle
+++ b/boundary-acceptance-test/build.gradle
@@ -50,6 +50,10 @@ tasks.register('integrationTest', Test) {
     classpath = sourceSets.integrationTest.runtimeClasspath
     shouldRunAfter test
 
+    systemProperty("cucumber.execution.parallel.enabled", false)
+    systemProperty("cucumber.junit-platform.naming-strategy", "long")
+    systemProperty("cucumber.plugin", "message:build/reports/cucumber.ndjson, timeline:build/reports/timeline, html:build/reports/cucumber.html")
+
     useJUnitPlatform()
 }
 
