--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,11 @@ org.gradle.daemon=true
 commonsCLIVersion=1.5.0
 discord4JVersion=3.2.5
 dropwizardVersion=2.1.6
+flywayVersion=9.22.1
+hikariVersion=5.0.1
 jedisVersion=4.4.4
+jooqVersion=3.18.6
+postgresqlJdbcVersion=42.6.0
 rxJavaVersion=3.1.6
 servletApiVersion=4.0.1
 springBootVersion=3.1.3
