--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ include 'gateway'
 include 'gateway-acceptance-test'
 include 'gateway-filesystem'
 include 'gateway-inmemory'
+include 'gateway-postgresql'
 include 'gateway-redis'
 
 include 'messaging'
