Add jakarta.inject dependency
To prepare the code base for the usage of an actual DI framework the jakarta.inject dependency has been added to the project.

https://github.com/flens-dev/pendenzenliste/issues/52

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ configure(subprojects.findAll()) {
     }
 
     dependencies {
+        implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
+
         testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
         testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"
