Performed various refactorings
https://github.com/flens-dev/pendenzenliste/issues/52

--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ configure(subprojects.findAll()) {
         ignoreFailures = true
     }
 
-    tasks.matching { it.name.startsWith("spotbugs") }.each {
+    tasks.matching { it.name.contains("spotbugs") }.each {
         if (it.name.contains("Test")) {
             it.enabled = false
         }
