--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ vaadinVersion=24.1.9
 # Build dependency versions
 desiredNpmVersion=16.20.1
 desiredPnpmVersion=8.7.5
+h2Version=2.2.224
 # Test dependency versions
 assertJVersion=3.24.2
 archUnitVersion=1.1.0
