Renamed gateway-postgresql to gateway-postgresql-jooq
https://github.com/flens-dev/pendenzenliste/issues/49

--- a/boundary-acceptance-test/build.gradle
+++ b/boundary-acceptance-test/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
     integrationTestImplementation project(':gateway-filesystem')
     integrationTestImplementation project(':gateway-inmemory')
-    integrationTestImplementation project(':gateway-postgresql')
+    integrationTestImplementation project(':gateway-postgresql-jooq')
     integrationTestImplementation project(':gateway-redis')
     integrationTestImplementation project(':messaging-inmemory')
 
