Added codecov Integration

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -32,3 +32,6 @@ jobs:
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: clean build integrationTest
+
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v3
