--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,3 +35,5 @@ jobs:
           arguments: build
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
