Enable jacoco XML reports

--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ configure(subprojects.findAll()) {
 
     jacocoTestReport {
         reports {
-            xml.required = false
+            xml.required = true
             csv.required = false
         }
     }
