Record Jacoco Reports for Integration Tests

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,11 @@ configure(subprojects.findAll()) {
     tasks.test {
         finalizedBy(tasks.jacocoTestReport)
     }
+
+    tasks.integrationTest {
+        finalizedBy(tasks.jacocoTestReport)
+    }
+
     tasks.jacocoTestReport {
         dependsOn(tasks.test)
     }
