Extracted vaadin-binding-properties into subproject

--- a/app-vaadin/build.gradle
+++ b/app-vaadin/build.gradle
@@ -20,6 +20,7 @@ defaultTasks("clean", "build")
 
 dependencies {
     implementation project(':boundary')
+    implementation project(':vaadin-binding-properties')
 
     runtimeOnly project(':boundary-usecases')
     runtimeOnly project(':gateway-filesystem')
