Moved domain utilities to subproject

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,4 +2,5 @@ dependencies {
     api project(':domain-todos')
     api project(':domain-achievements')
     api project(':domain-statistics')
+    api project(':util-domain')
 }
