Moved static analysis versions to gradle.properties

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "com.github.spotbugs.snom:spotbugs-gradle-plugin:5.1.4"
+        classpath "com.github.spotbugs.snom:spotbugs-gradle-plugin:${spotbugsPluginVersion}"
     }
 }
 
@@ -73,7 +73,7 @@ configure(subprojects.findAll()) {
     pmd {
         consoleOutput = false
         sourceSets = [project.sourceSets.main]
-        toolVersion = "6.55.0"
+        toolVersion = "${pmdVersion}"
         incrementalAnalysis = true
 
         //TODO: Set this flag to false as soon as the issues are fixed
@@ -81,7 +81,7 @@ configure(subprojects.findAll()) {
     }
 
     project.spotbugs {
-        toolVersion = '4.8.1'
+        toolVersion = "${spotbugsVersion}"
 
         //TODO: Set this flag to false as soon as the issues are fixed
         ignoreFailures = true
