--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,6 @@ testContainersVersion=1.19.0
 # Static code analysis versions
 findsecbugsVersion=1.12.0
 spotbugsAnnotationVersion=4.7.3
+spotbugsVersion=4.8.2
+spotbugsPluginVersion=5.2.5
+pmdVersion=6.55.0
