--- a/gateway-acceptance-test/build.gradle
+++ b/gateway-acceptance-test/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation "org.jooq:jooq:${jooqVersion}"
     implementation "org.flywaydb:flyway-core:${flywayVersion}"
 
+    integrationTestImplementation project(':gateway-eclipse-store')
     integrationTestImplementation project(':gateway-filesystem')
     integrationTestImplementation project(':gateway-inmemory')
     integrationTestImplementation project(':gateway-postgresql-jooq')
@@ -55,4 +56,7 @@ tasks.register('integrationTest', Test) {
     shouldRunAfter test
 
     useJUnitPlatform()
+
+    // Required to allow testing of eclipse store based gateways
+    jvmArgs = ['--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED']
 }
